# nixos-config

./: .gitignore  CLAUDE.md  DEPLOY-NOW.md  Justfile  NEOVIM-QUICK-REFERENCE.md  README.md  SETUP_OBSIDIAN.md  TESTING-CHECKLIST.md  colmena.nix  deploy-and-test.sh  fix-nvim.sh  flake.nix
.claude/: ralph-loop.local.md
darwin/: common.nix
docs/: 2026-02-20-simplification-migration.md
docs/homelab-platform/: BOOTSTRAP.md  documentation-audit-2026-02-16.md  iterations.md  overview.md
docs/hosts/: msi-ms7758.md
docs/jarvis-core/: agents.md  events.md  iterations.md  knowledge-graph.md  overview.md
docs/plans/: 2026-02-18-nushell-to-bash.md  2026-02-18-remove-nushell-use-bash.md  2026-02-20-obsidian-documentation-workflow-design.md  2026-02-20-obsidian-workflow-implementation.md  2026-02-20-simplify-sam-profile-and-add-desktop-specialisation.md  2026-02-21-knowledge-vault-improvements-design.md  2026-02-21-knowledge-vault-improvements.md  2026-02-21-neovim-setup-design.md  2026-02-21-neovim-setup.md  2026-03-14-prebaked-template-design.md  2026-03-14-preexisting-repo-design.md  2026-03-14-preexisting-repo.md
dotfiles/nvim/: init.lua
dotfiles/vscode/: keybindings.json  settings.json
flake-modules/: 05-overlays.nix  20-module-registry.nix  30-configurations-options.nix  40-outputs-nixos.nix  41-outputs-darwin.nix
flake-modules/hosts/: acer-swift.nix  claude-worker-template.nix  lenovo.nix  msi-ms7758.nix  openfang-agent-template.nix  work-mac.nix  workstation-template.nix
home/: lukas.nix
home/lukas/: acer-swift.nix
hosts/acer-swift/: configuration.nix  default.nix  hardware-configuration.nix  home.nix  variables.nix
hosts/claude-worker-template/: configuration.nix  variables.nix
hosts/lenovo-21CB001PMX/: configuration.nix  default.nix  hardware-configuration.nix  home.nix  variables.nix
hosts/msi-ms7758/: configuration.nix  home.nix  (+3 more)
lib/: mkHost.nix  obsidian-plugins.nix  theme.nix  users.nix
modules/: stylix.nix
modules/homelab/claude-worker/: CLAUDE.md  Cargo.toml  flake.nix  settings.json
modules/homelab/claude-worker/hooks/: check-goals.sh  validate-bash.sh  validate-manifest.sh
modules/homelab/claude-worker/src/: main.rs  metrics.rs
nixos/: automation.nix  common.nix  desktop.nix  laptop.nix
pkgs/: claude-ctl.nix  codex.nix  default.nix  openfang-ctl.nix
profiles/: base.nix  desktop.nix  laptop.nix  server.nix
scripts/: build-workstation-image.sh  publish-oci-image.sh  verify-all-hosts.sh  window-switcher.sh
secrets/: .sops.yaml  cosign.key  cosign.pub
(+163 files in other folders)
