[package]
name = "claude-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-worker"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
futures-util = "0.3"
