[package]
name = "claude-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-worker"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
futures-util = "0.3"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client", "metrics", "trace", "grpc-tonic"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
